MI & STF patch updates
Large patch update for MI
Highly requested fix added to STF

--- a/MapImprovements/MapImprovements.csproj
+++ b/MapImprovements/MapImprovements.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigControl.cs" />
+    <Compile Include="CustomKillTrigger.cs" />
     <Compile Include="Patches\RoundManagerPatch.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
